--- a/Mock_Test/codingQues_1.ipynb
+++ b/Mock_Test/codingQues_1.ipynb
@@ -7,17 +7,14 @@
    "outputs": [],
    "source": [
     "def moveZeroes(nums):\n",
-    "    left = 0  # left pointer\n",
+    "    left = 0 \n",
     "    for right in range(len(nums)):\n",
     "        if nums[right] != 0:\n",
     "            nums[left], nums[right] = nums[right], nums[left]\n",
     "            left += 1\n",
-    "\n",
-    "    # Fill the remaining elements with zeros\n",
     "    while left < len(nums):\n",
     "        nums[left] = 0\n",
     "        left += 1\n",
-    "\n",
     "    return nums"
    ]
   },
