--- a/Mock_Test/Data_Science/Mock_Test_1/01.Question_01.ipynb
+++ b/Mock_Test/Data_Science/Mock_Test_1/01.Question_01.ipynb
@@ -17,15 +17,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_even_numbers(input_list):\n",
+    "    return [num for num in input_list if num % 2 == 0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "output_list = get_even_numbers(input_list)\n",
+    "print(output_list)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
