--- a/Mock_Test/Data_Science/Mock_Test_1/03.Question_03.ipynb
+++ b/Mock_Test/Data_Science/Mock_Test_1/03.Question_03.ipynb
@@ -25,15 +25,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_mean(numbers):\n",
+    "    total = sum(numbers)\n",
+    "    count = len(numbers)\n",
+    "    mean = total / count\n",
+    "    return mean\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [10, 15, 20, 25, 30]\n",
+    "mean_value = calculate_mean(data)\n",
+    "print(\"Mean:\", mean_value)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
