--- a/Mock_Test/Data_Science/Mock_Test_1/04.Question_04.ipynb
+++ b/Mock_Test/Data_Science/Mock_Test_1/04.Question_04.ipynb
@@ -26,15 +26,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy import stats\n",
+    "\n",
+    "def perform_hypothesis_test(sample1, sample2):\n",
+    "    t_statistic, p_value = stats.ttest_ind(sample1, sample2)\n",
+    "    return p_value\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P-value: 0.09434977284243756\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample1 = [5, 10, 15, 20, 25]\n",
+    "sample2 = [10, 20, 30, 40, 50]\n",
+    "p_value = perform_hypothesis_test(sample1, sample2)\n",
+    "print(\"P-value:\", p_value)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
